pousada secreta final

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
           <a class="link-topo" href="#sobre">SOBRE</a>
           <a class="link-topo" href="#rota">ROTA</a>
-          <a class="link-topo" href="#">QUARTOS</a>
+          <a class="link-topo" href="/pages/quartos.html">QUARTOS</a>
         </div>
   </header>
   <main>
@@ -51,7 +51,7 @@
       <div>
         <img src="assets/imgs/quarto-solteiro1.jpg" alt="">
 
-        <a href="#">
+        <a href="/pages/quartos.html#solteiro">
           <p>
             QUARTO DE SOLTEIRO
           </p>
@@ -61,7 +61,7 @@
       <div>
         <img src="assets/imgs/quarto-casal1.jpg" alt="">
 
-        <a href="#">
+        <a href="/pages/quartos.html#casal">
           <p>
             QUARTO DE CASAL
           </p>
@@ -71,7 +71,7 @@
       <div>
         <img src="assets/imgs/quarto-familia1.jpg" alt="">
 
-        <a href="#">
+        <a href="/pages/quartos.html#familia">
           <p>
             QUARTO FAMÍLIA
           </p>
