--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
           <a class="link-topo" href="#sobre">SOBRE</a>
           <a class="link-topo" href="#rota">ROTA</a>
-          <a class="link-topo" href="/pages/quartos.html">QUARTOS</a>
+          <a class="link-topo" href="../pages/quartos.html">QUARTOS</a>
         </div>
   </header>
   <main>
