--- a/pages/quartos.html
+++ b/pages/quartos.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/estilo.css">
-  <link rel="stylesheet" href="/css/estilo-quartos.css">
+  <link rel="stylesheet" href="../css/estilo.css">
+  <link rel="stylesheet" href="../css/estilo-quartos.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap
   ">
   <title>Quartos - Pousada Secreta</title>
 </head>
 <body>
   <header>
-    <a class="link-topo" href="/index.html">
+    <a class="link-topo" href="../index.html">
       Pousada <span>Secreta</span>
     </a>
     <div>
-      <a class="link-topo" href="/index.html#sobre">SOBRE</a>
-      <a class="link-topo" href="/index.html#rota">ROTA</a>
+      <a class="link-topo" href="../index.html#sobre">SOBRE</a>
+      <a class="link-topo" href="../index.html#rota">ROTA</a>
       <a class="link-topo" href="quartos.html">QUARTOS</a>
     </div>
 </header>
