--- a/pages/quartos.html
+++ b/pages/quartos.html
@@ -154,7 +154,7 @@
       </div>
       
       <a class="rodape-infos" href="">
-        <img class="icon" src="/assets/icons/endereco.png" alt="">
+        <img class="icon" src="../assets/icons/endereco.png" alt="">
 
         <p>
           Endereço
@@ -164,7 +164,7 @@
 
 
       <div class="rodape-infos">
-        <img class="icon" src="/assets/icons/telefone.png" alt="">
+        <img class="icon" src="../assets/icons/telefone.png" alt="">
 
         <p>
           Cel: 5521000000000
@@ -172,7 +172,7 @@
       </div>
 
       <a class="rodape-infos" href="">
-        <img class="icon" src="/assets/icons/calendario.png" alt="">
+        <img class="icon" src="../assets/icons/calendario.png" alt="">
 
         <p>
           Faça sua reserva pelo Booking.com
