--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div>
         <img src="assets/imgs/quarto-solteiro1.jpg" alt="">
 
-        <a href="/pages/quartos.html#solteiro">
+        <a href="pages/quartos.html#solteiro">
           <p>
             QUARTO DE SOLTEIRO
           </p>
@@ -61,7 +61,7 @@
       <div>
         <img src="assets/imgs/quarto-casal1.jpg" alt="">
 
-        <a href="/pages/quartos.html#casal">
+        <a href="pages/quartos.html#casal">
           <p>
             QUARTO DE CASAL
           </p>
@@ -71,7 +71,7 @@
       <div>
         <img src="assets/imgs/quarto-familia1.jpg" alt="">
 
-        <a href="/pages/quartos.html#familia">
+        <a href="pages/quartos.html#familia">
           <p>
             QUARTO FAMÍLIA
           </p>
